# mcp-metatrader5-server

./: .coverage  .dockerignore  .env.example  .env.production.example  .gitignore  .readthedocs.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.linux  Dockerfile.wine  HYBRID_DEPLOYMENT.md  LINUX_WITHOUT_WINDOWS.md  N8N_INTEGRATION.md  README.md  docker-compose.yml  dokploy.yaml  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  publish.yml
docker/: setup-wine-mt5.sh  start-server-wine.sh
docs/: mkdocs.yml  pydantic_ai_integration.md
examples/: example_ai_trader_agent.py
node-server/: .env.example  package.json
node-server/python/: bridge.py
node-server/src/: mt5Bridge.js  mt5BridgeRemote.js  server.js
src/mcp_mt5/: .env  __init__.py  main.py  test_client.py
tests/: README.md  conftest.py  test_account_info.py  test_connection.py  test_market_data.py  test_models.py  test_timeframes.py
windows-bridge/: .env.example  mt5-bridge-server.py  requirements.txt
