[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-metatrader5-server"
version = "0.1.4"
description = "A Model Context Protocol (MCP) server for MetaTrader 5"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Abdul Qoyyuum"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastmcp==2.12.4",
    "metatrader5==5.0.5260",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
]

[project.urls]
"Homepage" = "https://github.com/Qoyyuum/mcp-metatrader5-server"
"Bug Tracker" = "https://github.com/Qoyyuum/mcp-metatrader5-server/issues"

[project.scripts]
mt5mcp = "mcp_mt5:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
